Mon Jan 31 19:08:37 2000  Tim Janik  <timj@gtk.org>

	* bsemixer.c (bse_mixer_calc_chunk): fixed optimization bug that cause
	volumes to not take effect sometimes.

	* icons/mic.*:
	* bsecapture.[hc]:
	moved capturing source into BSE proper.

Mon Jan 17 16:11:03 2000  Tim Janik  <timj@gtk.org>

	* davsyndrum.[hc]: added edge-sensitive trigger input channel.

Mon Jan 17 11:15:37 2000  Tim Janik  <timj@gtk.org>

	* davsyndrum.[hc]: added DavSynDrum module, a synthesized drum
	generator, provided by David A. Bartold <foxx@mail.utexas.edu>
	(minor updates from my part to honour BSE_MIX_FREQ after _prepare()
	and to adjust parameter resolutions).

	* davorgan.c (dav_organ_set_param): fixed a minor bug i introduced.

Sun Jan 16 02:51:06 2000  Tim Janik  <timj@gtk.org>

	* davorgan.[hc]: added DavOrgan module, an additive organ
	synthesizer provided by David A. Bartold <foxx@mail.utexas.edu>.
	did overall clean up for coding style etc.

Sat Jan 15 19:51:16 2000  Tim Janik  <timj@gtk.org>

	* bsemixer.[hc]: new source which will mix up to four input channels
	at specified volumes together.

	* *.c: adapted a couple plugins to include bsehunkmixer.h and make use
	of bse_hunk_clip_mix_buffer(). enforced usage of BSE_MAX_SAMPLE_VALUE
	instead of hardcoded numbers.

Wed Jan 12 23:45:39 2000  Tim Janik  <timj@gtk.org>

	* bsegenosc.[hc]: export BseGenOscWaveType to BSE and add a parameter
	spec for the wave form, made the wave form selection radio buttons
	pure GUI items.

	* listplugins.sh: feature BSE_EXPORT_AND_GENERATE_ENUMS() in cfiles,
	write out %.enums creation dependancies.

	* Makefile.am: added %.enums: %.h generation rule for plugin enum types.
	support build sources in general.

Fri Jan  7 23:26:26 2000  Tim Janik  <timj@gtk.org>

	* bsecompressor.[hc]: added adjustable compressor.

Mon Jan  3 16:50:55 2000  Tim Janik  <timj@gtk.org>

	* Makefile.am (plugindir): use value from $(bseplugindir).

Wed Dec 29 12:19:34 1999  Tim Janik  <timj@gtk.org>
