@@ -1,5 +1,5 @@
 /* BseMixer - BSE Mixer
- * Copyright (C) 1999 Tim Janik
+ * Copyright (C) 1999, 2000 Tim Janik
  *
  * This library is free software; you can redistribute it and/or modify
  * it under the terms of the GNU Library General Public License as
